--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,9 +3,9 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [project]
-name = "openai-gradio"
-version = "0.0.3"
-description = "A Python package for creating Gradio applications with OpenAI models"
+name = "langchain-gradio"
+version = "0.0.5"
+description = "A Python package for creating Gradio applications with LangChain"
 authors = [
     { name = "AK", email = "ahsen.khaliq@gmail.com" }
 ]
@@ -17,17 +17,24 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 dependencies = [
-    "gradio>=5.0.0b5",
-    "openai",
+    "gradio>=5.0.2",
+    "langchain",
+    "langchain-openai",
+    "langchain-anthropic",
+    "langchain-google-genai",
+    "langchain-huggingface",
 ]
 
 [project.urls]
-homepage = "https://github.com/AK391/openai-gradio"
-repository = "https://github.com/AK391/openai-gradio"
+homepage = "https://github.com/AK391/langchain-gradio"
+repository = "https://github.com/AK391/langchain-gradio"
 
 [project.optional-dependencies]
 dev = ["pytest"]
 
 [tool.hatch.build.targets.wheel]
-packages = ["openai_gradio"]
+packages = ["langchain_gradio"]
+
+
+
 
